[tool.poetry]
name = "quick-pint"
version = "0.1.0"
description = ""
authors = ["Alex Stapleton <alexs@prol.etari.at>"]

[tool.poetry.dependencies]
python = "^3.9"
Pint = "^0.17"

[tool.poetry.dev-dependencies]
setuptools-rust = "^0.12.1"
mypy = "^0.902"
black = "^21.6b0"
flake8 = "^3.9.2"
maturin = "^0.10.6"
pytest = "^6.2.4"
Pint = "^0.17"
pytest-benchmark = "^3.4.1"
py-spy = "^0.3.7"
hypothesis = "^6.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
